cloud-controller/aws/bedrock/guardrails/check-word-policy/check-word-policy.yaml
apiVersion: nirmata.io/v1alpha1
kind: ValidatingPolicy
metadata:
  name: check-word-policy
  labels:
    app: kyverno
spec:
  failureAction: Audit
  matchConditions:
    - name: match-create-update
      expression: >
        request.operation in ['CREATE', 'UPDATE']
    - name: aws-bedrock-guardrail
      expression: >
        object.TypeName == 'AWS::Bedrock::Guardrail'
  validations:
    - expression: >
        has(object.ResourceDescription) ?
        (
          has(object.ResourceDescription.Properties) &&
          has(object.ResourceDescription.Properties.wordPolicyConfig)
        ) :
        (
          has(object.wordPolicyConfig)
        )
      message: "A word policy consisting of selected denied words or phrases should be enabled in the guardrail"
